--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,22 @@ jyenv/
 pypyenv/
 env*/
 tests/test.db
+
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+.tags
+# Persistent undo
+[._]*.un~
